[package]
name = "jose-jwa"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Algorithm (JWA) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7518
"""
documentation = "https://docs.rs/jose-jwa"
repository = "https://github.com/RustCrypto/JOSE/tree/master/jose-jwa"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[features]
default = ["crypto"]
crypto = ["p256", "p384", "rsa"]

[dependencies]
jose-jwk = { version = "0.1", path = "../jose-jwk" }
serde = { version = "1.0.160", default-features = false, features = ["alloc", "derive"] }
zeroize = { version = "1.6.0", default-features = false, features = ["alloc"] }

# optional dependencies
p256 = { version = "0.13.2", default-features = false, optional = true, features = ["arithmetic"] }
p384 = { version = "0.13.0", default-features = false, optional = true, features = ["arithmetic"] }
rsa = { version = "0.9", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1.0.96"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
