[package]
name = "jose-jwk"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Pure Rust implementation of the JSON Web Key (JWK) component of the
Javascript Object Signing and Encryption (JOSE) specification as described in
RFC7517
"""
documentation = "https://docs.rs/jose-jwk"
repository = "https://github.com/RustCrypto/JOSE/tree/master/jose-jwk"
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
keywords = ["json", "jose"]
readme = "README.md"
edition = "2021"
rust-version = "1.65"

[dependencies]
jose-b64 = { version = "0.1", default-features = false, features = ["secret"], path = "../jose-b64" }
monostate = "0.1.6"
serde = { version = "1.0.160", default-features = false, features = ["alloc", "derive"] }
zeroize = { version = "1.6.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
hex-literal = "0.4.1"
serde_json = "1.0.96"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
